--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>shoppingList</h2>
+    <ol>
+       <li data-ns-test="shoppinlist">car</li>
+       <li data-ns-test="shoppinlist">hublot</li>
+       <li data-ns-test="shoppinlist">outfits</li>
+    </ol>
+    <h2>holidayList</h2>
+    <ul>
+        <li data-ns-test="holidayList">mecca</li>
+        <li data-ns-test="holidayList">switzerland</li>
+        <li data-ns-test="holidayList">maldives</li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
