--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 	
     <ol>
-       <li data-ns-test="shoppinlist">car</li>
-       <li data-ns-test="shoppinlist">hublot</li>
-       <li data-ns-test="shoppinlist">outfits</li>
+       <li data-ns-test="shoppingList">car</li>
+       <li data-ns-test="shoppingList">hublot</li>
+       <li data-ns-test="shoppingList">outfits</li>
     </ol>
   
     <ul>
